Summary of list pages

--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -1,9 +1,17 @@
 {{ define "main" }}
-  <h1>Posts</h1>
-  {{ range .Pages }}
+{{ range first 10 .Pages }}
     <article>
-      <h2>{{ .Title }}</h2>
-      {{ .Content }}
+      <!-- this <div> includes the title summary -->
+      <div>
+        <h2><a href="{{ .RelPermalink }}">{{ .Title }}</a></h2>
+        {{ .Summary }}
+      </div>
+      {{ if .Truncated }}
+      <!-- This <div> includes a read more link, but only if the summary is truncated... -->
+      <div>
+        <a href="{{ .RelPermalink }}">Read More…</a>
+      </div>
+      {{ end }}
     </article>
-  {{ end }}
+{{ end }}
 {{ end }}
