--- a/assets/sass/_content_wrapper.scss
+++ b/assets/sass/_content_wrapper.scss
@@ -19,7 +19,9 @@
     padding-left: 20%;
     padding-right: 20%;
     line-height: 1.6;
-    margin-bottom:4em;
+    background-color: #292a2d;
+    color: white;
+    text-rendering: optimizeLegibility;
 }
 
 #content-wrapper h1, h2, h3, h4, h5 {
