--- a/assets/sass/_fonts.scss
+++ b/assets/sass/_fonts.scss
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@600&family=Raleway:wght@600&family=Roboto:wght@500&display=swap');
 
-body {
+*:not(code) {
   font-family: 'Raleway','Montserrat', 'Roboto', sans-serif;
 }
 
