--- a/layouts/partials/head/style.html
+++ b/layouts/partials/head/style.html
@@ -1,4 +1,4 @@
-{{ $style := resources.Get "sass/main.scss" | resources.ToCSS | resources.Minify }}
+{{/*  {{ $style := resources.Get "sass/main.scss" | resources.ToCSS | resources.Minify }}
   <link rel="stylesheet" href="{{ $style.Permalink }}">
 
 {{ $style := resources.Get "sass/_fonts.scss" | resources.ToCSS | resources.Minify }}
@@ -14,8 +14,16 @@
   <link rel="stylesheet" href="{{ $style.Permalink }}"> 
 
 {{ $style := resources.Get "sass/navbar.scss" | resources.ToCSS | resources.Minify }}
-  <link rel="stylesheet" href="{{ $style.Permalink }}"> 
+  <link rel="stylesheet" href="{{ $style.Permalink }}">   */}}
 
 <!-- This loop should work, but navbar does not work... may post and work afterwards -->
 {{/*  {{ $CSS := resources.Match "sass/**.scss" | resources.Concat "styles.css" }}
 <link rel="stylesheet" href="{{ $CSS.Permalink }}" media="all">  */}}
+
+<!-- CSS -->
+{{/*  {{ $options := (dict "targetPath" "main.css" "outputStyle" "compressed" "enableSourceMap" true) }}
+{{ $style := resources.Get "scss/main.scss" | resources.ToCSS $options | resources.Fingerprint }}
+<link rel="stylesheet" href="{{ $style.RelPermalink }}" integrity="{{ $style.Data.Integrity }}">  */}}
+
+{{ $style := resources.Get "sass/main.scss" | resources.ToCSS | resources.Fingerprint }}
+<link rel="stylesheet" href="{{ $style.Permalink }}" integrity="{{ $style.Data.Integrity }}">
