--- a/assets/sass/_footer.scss
+++ b/assets/sass/_footer.scss
@@ -1,7 +1,10 @@
 footer {
+    //margin-top: auto;
     padding: 40px 20px;
-    flex-grow: 0;
-    color: #999;
-    text-align: center;
-    text-rendering: optimizeLegibility;
+flex-grow: 0;
+color: #999;
+    // padding: 40px 20px;
+    // color: #999;
+    // text-align: center;
+    // text-rendering: optimizeLegibility;
 }
