--- a/assets/sass/_fonts.scss
+++ b/assets/sass/_fonts.scss
@@ -1,7 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@600&family=Raleway:wght@600&family=Roboto:wght@500&display=swap');
+//@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@600&family=Raleway:wght@600&family=Roboto:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300&family=Montserrat:wght@600&family=Roboto:wght@500&display=swap');
 
-*:not(code) {
-  font-family: 'Raleway','Montserrat', 'Roboto', sans-serif;
+html {
+  font-family: 'Inter','Montserrat', 'Roboto', sans-serif;
 }
 
 code {
