--- a/layouts/partials/head/style.html
+++ b/layouts/partials/head/style.html
@@ -20,10 +20,13 @@
 {{/*  {{ $CSS := resources.Match "sass/**.scss" | resources.Concat "styles.css" }}
 <link rel="stylesheet" href="{{ $CSS.Permalink }}" media="all">  */}}
 
-<!-- CSS -->
-{{/*  {{ $options := (dict "targetPath" "main.css" "outputStyle" "compressed" "enableSourceMap" true) }}
-{{ $style := resources.Get "scss/main.scss" | resources.ToCSS $options | resources.Fingerprint }}
-<link rel="stylesheet" href="{{ $style.RelPermalink }}" integrity="{{ $style.Data.Integrity }}">  */}}
-
 {{ $style := resources.Get "sass/main.scss" | resources.ToCSS | resources.Fingerprint }}
 <link rel="stylesheet" href="{{ $style.Permalink }}" integrity="{{ $style.Data.Integrity }}">
+
+{{/*  {{ $prismjs := resources.Get "js/prism.js" | resources.Minify }}
+{{ $prismjs = $prismjs | fingerprint "md5" }}
+<script src="{{ $prismjs.RelPermalink }}"></script>
+
+{{ $prismcss := resources.Get "css/prism.css" | resources.Minify }}
+{{ $prismcss = $prismcss | fingerprint "md5" }}
+<link rel="stylesheet" href="{{ $prismcss.RelPermalink }}">  */}}
