--- a/assets/sass/_postmetadata.scss
+++ b/assets/sass/_postmetadata.scss
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-around;
 }
 .readingmetadata {
     display: flex;
@@ -10,8 +10,15 @@
     gap: 1rem;
 }
 
+.postmetadata_footer {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+}
+
 @media only screen and (max-width: 800px) {
-    .readingmetadata {
+    .readingmetadata, .postmetadata_footer {
         display: none;
     }
     .postmetadata {
