--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,4 +1,6 @@
 {{ define "main" }}
     <!--This is the single template-->
-    {{ .Content }}
+    <div class="post">
+        {{ .Content }}
+    </div>
 {{ end }}
