--- a/layouts/shortcodes/h.html
+++ b/layouts/shortcodes/h.html
@@ -1,2 +1,2 @@
-{{ $opts := dict "hl_inline" true "style" "github" }}
-{{ highlight .Inner (.Get 0) $opts }}
+{{/*  {{ $opts := dict "hl_inline" true "style" "github" }}
+{{ highlight .Inner (.Get 0) $opts }}  */}}
