--- a/layouts/posts/single.html
+++ b/layouts/posts/single.html
@@ -19,10 +19,10 @@
 <aside>
   <div class="postmetadata_footer">
     {{ with .PrevInSection }}
-    <span> Previous: <a class="previous" href="{{ .Permalink }}"> {{ .Title }}</a></span>
+    <span> Previous: <a class="previous" href="{{ .RelPermalink }}"> {{ .Title }}</a></span>
     {{ end }}
     {{ with .NextInSection }}
-    <span> Next: <a class="next" href="{{ .Permalink }}"> {{ .Title }} </a></span>
+    <span> Next: <a class="next" href="{{ .RelPermalink }}"> {{ .Title }} </a></span>
     {{ end }}
   </div>
 </aside>
