--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -6,7 +6,7 @@
     <script src='/js/prism.js'></script>  */}}
 
     {{ partial "head/meta" . }}
-    <link rel='canonical' href='{{ .Permalink }}' />
+    <link rel='canonical' href='{{ .RelPermalink }}' />
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     {{- template "_internal/google_analytics.html" . -}}
     {{- template "_internal/google_analytics_async.html" . -}}
