--- a/layouts/partials/head/meta.html
+++ b/layouts/partials/head/meta.html
@@ -1,4 +1,4 @@
-<meta charset="UTF-8" />
-<meta name="author" content="Nobody" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<meta charset="UTF-8">
+<meta name="author" content="BluePrismo">
+<meta name="viewport" content="width=device-width, initial-scale=1">
   
