Update colours and add meta info

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -8,8 +8,8 @@ body {
   display: flex;
   min-height: 100vh;
   flex-direction: column;
-  background-color: #292a2d;
-  color: #c5c5c5;
+  background-color: #1b1c1e;
+  color: #d2d2d2;
 }
 
 html{
