--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -5,7 +5,7 @@
 
     {{ range .Pages }}
     <div>
-      <a href="{{ .RelPermalink }}">{{ .Title }}</a><br/>
+      <a href="{{ .RelPermalink }}" aria-label="{{ .Summary }}" >{{ .Title }}</a><br/>
       <div class="meta">{{ .Date.Format "02-01-2006" }}</div>
        {{ .Summary }}
       {{ if .Truncated }}
