Update href logo color

--- a/layouts/partials/header/header.html
+++ b/layouts/partials/header/header.html
@@ -3,7 +3,7 @@
         {{/*  This first part will be the logo with a simple animation  */}}
         <div class="logo">
             <span class="logo_text">
-                <a href="{{ .Site.BaseURL }}" style="text-decoration: none;">{{ site.Params.prompt }}</a>
+                <a href="{{ .Site.BaseURL }}" style="text-decoration: none !important; color:inherit;">{{ site.Params.prompt }}</a>
             </span>
             <span class="logo_cursor"></span>
         </div>
