--- a/layouts/partials/head/meta.html
+++ b/layouts/partials/head/meta.html
@@ -1,6 +1,7 @@
 <meta charset="UTF-8">
 <meta name="author" content="BluePrismo">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="description" content="Author: Blueprismo,
-    A main static Webpage for sharing content, articles, thoughts and teachings to whoever may like,
-    also hoping this outlives me as a nice memory around here.">
+
+
+<meta name="description" content="Author: Blueprismo, A main static Webpage for sharing content, articles, thoughts and teachings to whoever may like, also hoping this outlives me as a nice memory around here.">
+
