--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">  
   <body>
-    {{ partial "head" . | safeHTML }}
+    {{ partial "head" . }}
     <!--  Menu navigation  -->
     <div class="container">
-      {{ partial "header/header.html" . | safeHTML }}
+      {{ partial "header/header.html" . }}
       <div id="content_wrapper">
         <!-- Code that all your templates share, like a header -->
         {{ block "main" . }}
