--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -4,7 +4,8 @@
     <title>{{ .Params.title }} | {{ .Site.Title }} </title>
     <link rel="canonical" href="{{ .Permalink }}" />
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
-    {{- template "_internal/google_analytics.html" . -}}
-    {{- template "_internal/google_analytics_async.html" . -}}
+    {{ partial "head/ganalytics" . }}
+    {{/*  {{- template "_internal/google_analytics.html" . -}}
+    {{- template "_internal/google_analytics_async.html" . -}}  */}}
     {{- partial "head/rss" . }}
 </head>
