--- a/assets/sass/_container.scss
+++ b/assets/sass/_container.scss
@@ -14,5 +14,6 @@ code > span {
 // inline, this should be removed!
 code {
   background-color: black;
+  color: yellow;
   border-radius: 0.25rem;
 }
