--- a/assets/sass/posts/_post_metadata.scss
+++ b/assets/sass/posts/_post_metadata.scss
@@ -2,8 +2,9 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-between;
 }
+
 .readingmetadata {
     display: flex;
     flex-direction: row;
