--- a/assets/sass/posts/_post_metadata.scss
+++ b/assets/sass/posts/_post_metadata.scss
@@ -3,6 +3,7 @@
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
+    padding: 0 0 2rem 0;
 }
 
 .readingmetadata {
