--- a/assets/sass/_fonts.scss
+++ b/assets/sass/_fonts.scss
@@ -1,8 +1,9 @@
 //@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@600&family=Raleway:wght@600&family=Roboto:wght@500&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300&family=Montserrat:wght@600&family=Roboto:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap');
 
 html {
-  font-family: 'Inter','Montserrat', 'Roboto', sans-serif;
+  font-family: 'Rubik', 'Montserrat', 'Roboto', sans-serif;
 }
 
 code {
