--- a/assets/sass/posts/_post_content.scss
+++ b/assets/sass/posts/_post_content.scss
@@ -1,6 +1,8 @@
 #content {
     text-align: left;
-    font-size: 1.15em;
+    // font-size: 1.10em;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
 }
 
 // Header sizes
@@ -9,22 +11,18 @@
     text-decoration: underline;
 }
 #content h1 {
-    font-size: 3em;
+    font-weight: 500;
+    font-size: 2em;
 }
 #content h2 {
-    font-size: 2.05em;
+    font-weight: 500;
+    font-size: 1.5em;
 }
 #content h3 {
-    font-size: 1.70em;
+    font-size: 1.17em;
 }
 #content h4 {
-    font-size: 1.2em;
-}
-#content h5 {
-    font-size: 1.20em;
-}
-#content h6 {
-    font-size: 1.05em;
+    font-size: 1.1em;
 }
 
 // Center images
