--- a/layouts/partials/head/meta.html
+++ b/layouts/partials/head/meta.html
@@ -1,4 +1,4 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8">
     <meta name="author" content="BluePrismo">
-    <meta name="description" content="Author: Blueprismo, A webpage for sharing content, mostly related about technology, security and DevOps/hacking articles and thoughts to whoever may like. To all the lovers and amateurs of technology.">
+    <meta name="description" content="Author: Blueprismo, A webpage for sharing content, mostly related about technology, security and DevOps/hacking articles and thoughts to whoever may like. To all the lovers and amateurs of technology. Have you ever had a doubt about how a technology works? Which train of thought you should have in order to solve a problem or why do you think the way you think? Then this is a good landing page. I post most of my work and hobby related stuff in here. Peace">
