--- a/layouts/partials/head/style.html
+++ b/layouts/partials/head/style.html
@@ -1,2 +1,2 @@
-{{ $style := resources.Get "sass/main.scss" | resources.ToCSS | resources.Minify | resources.Fingerprint  }}
+{{ $style := resources.Get "sass/main.scss" | toCSS | resources.Minify | resources.Fingerprint  }}
     <link rel="stylesheet" href="{{ $style.Permalink }}" integrity="{{ $style.Data.Integrity }}">
