--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -12,7 +12,7 @@ body {
   color: #d2d2d2;
   -webkit-font-smoothing: antialiased;
   min-height: 97vh;
-  font-weight: 300;
+  font-weight: normal;
   animation: fadeIn .36s;
 }
 
