--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">  
+<html lang="en">
   {{ partial "head" . }}
   <body>
     <!--  Menu navigation  -->
@@ -8,12 +8,18 @@
       <div id="content_wrapper">
         <!-- Code that all your templates share, like a header -->
         {{ block "main" . }}
-          <!-- The part of the page that begins to differ between templates -->  
+          <!-- The part of the page that begins to differ between templates -->
         {{ end }}
       </div>
       <!--  Footer  -->
       {{ block "footer" . }}
       {{ end }}
     </div>
+    {{ if .Store.Get "hasMermaid" }}
+      <script type="module">
+        import mermaid from 'https://cdn.jsdelivr.net/npm/mermaid/dist/mermaid.esm.min.mjs';
+        mermaid.initialize({ startOnLoad: true });
+      </script>
+    {{ end }}
   </body>
 </html>
