--- a/layouts/_markup/render-codeblock-mermaid.html
+++ b/layouts/_markup/render-codeblock-mermaid.html
@@ -1,6 +1,5 @@
-{{ .Page.Store.Set "hasMermaid" true }}
-
 <pre class="mermaid">
-  {{ .Inner | htmlEscape | safeHTML }}
+  {{ .Inner | safeHTML }}
 </pre>
 
+{{ .Page.Store.Set "hasMermaid" true }}
